<resources>
    <string name="app_name">AWAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello,</string>
    <string name="name">Name!</string>
    <string name="today">Today</string>
    <string name="_11_may">11 May</string>
    <string name="_34">34</string>
    <string name="sunny">Sunny</string>
    <string name="purwakarta_jawa_barat">Purwakarta, Jawa Barat</string>
    <string name="wind">Wind</string>
    <string name="velocity">15 km/h</string>
    <string name="hum">Hum</string>
    <string name="_26">26%</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Weather Detect</string>
    <string name="title_person">Account</string>
    <string name="title_detail">Hasil </string>
    <string name="process">Proses</string>
    <string name="upload_image">Upload Image</string>
    <string name="take_image">Take Image</string>
    <string name="Cek_Weather">Cek Weather</string>
    <string name="search_places">Search Places</string>
    <string name="demo_date">9 January, 2:41 PM </string>
    <string name="default_numbers">100</string>
    <string name="pressure">Pressure</string>
    <string name="max_temp"> Max Temp</string>
    <string name="humidity">Humidity</string>
    <string name="min_temp"> Min Temp</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature_in_f">Temperature In F</string>
    <string name="day">Day 17</string>
    <string name="night"> Night 9</string>
    <string name="main_temp">16*</string>
    <string name="feels_alike"> Feels Like 16</string>
    <string name="weather_type">Drizzle</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
</resources>