<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_history"
        android:title="@string/title_dashboard" />

    <item android:id="@+id/navigation_camera"
        android:title="@string/title_camera"
        android:icon="@drawable/ic_ca" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item android:id="@+id/navigation_person"
        android:title="@string/title_person"
        android:icon="@drawable/ic_person" />

</menu>